--- a/index.html
+++ b/index.html
@@ -240,6 +240,17 @@ rel="stylesheet"
         </div>
 
 </section>
+<section>
+    <div class="card  text-center d-flex justify-content-center align-items-center p-4">
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">
+            
+          </p>
+          <button type="button" class="btn btn-primary justify-content-center align-items-center">Button</button>
+        </div>
+      </div>
+</section>
     
 <!-- MDB -->
 <script
