--- a/index.html
+++ b/index.html
@@ -251,6 +251,16 @@ rel="stylesheet"
         </div>
       </div>
 </section>
+<section>
+    <div class="card">
+        <img
+          src="assets/img/tipos-de-clientes.png"
+          class="card-img-top"
+          alt="Fissure in Sandstone"
+        />
+        
+      </div>
+  </section>
     
 <!-- MDB -->
 <script
