--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ rel="stylesheet"
   <div class="col-md-6">
     
 
-<div class="card position-relative">
+<div class="card ">
     <img
-      src="assets/img/ASTON2.jpg"
+      src="assets/img/colore.jpg"
       class="card-img-top"
       alt="Fissure in Sandstone"
     />
@@ -180,7 +180,7 @@ rel="stylesheet"
     <div class="col-md-4 ">
         <div class="card">
             <img
-              src="assets/img/ASTON2.jpg"
+              src="assets/img/Palacio-Duhau-Park-Hyatt.jpeg"
               class="card-img-top"
               alt="Fissure in Sandstone"
             />
@@ -202,7 +202,7 @@ rel="stylesheet"
     <div class="col-md-4">
         <div class="card">
             <img
-              src="assets/img/ASTON2.jpg"
+              src="assets/img/3560503-una-mujer-en-un-hotel-de-lujo-.webp"
               class="card-img-top"
               alt="Fissure in Sandstone"
             />
@@ -220,9 +220,9 @@ rel="stylesheet"
     </div>
 
 </div>
-<div class="card">
+<div class="card col-md-4">
             <img
-              src="assets/img/ASTON2.jpg"
+              src="assets/img/ingdfio.jpg"
               class="card-img-top"
               alt="Fissure in Sandstone"
             />
